mon: notify_new_monmap in all the places we update our monmap

We can adopt new monmaps while bootstrapping, or in election messages, in
addition to MonmapMonitor::update_from_paxos. Since we use the
notification to update our election strategy and such, we need to notify
from these locations as well!

Fixes: https://tracker.ceph.com/issues/47654

Signed-off-by: Greg Farnum <gfarnum@redhat.com>
(cherry picked from commit 1d5f4e879e50a537ef6db51f7e519a03ab586cd5)

Resolves: rhbz#1939766