src/mon/MonmapMonitor.cc
@@ -93,7 +93,7 @@ void MonmapMonitor::update_from_paxos(bool *need_bootstrap)
 			   stringify(ceph_release()));
   }
 
-  mon->notify_new_monmap();
+  mon->notify_new_monmap(true);
 }
 
 void MonmapMonitor::create_pending()
